--- a/KTX/bin/KTX.dll.config
+++ b/KTX/bin/KTX.dll.config
@@ -9,7 +9,7 @@
   <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DBKTX" connectionString="data source=DESKTOP-GVUNC4S;initial catalog=QLKTX;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="DBKTX" connectionString="Data Source=DESKTOP-KDODQ4L;Initial Catalog=QLKTX;Integrated Security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings> 
 
   <appSettings>
